fixed timer position on small screens

--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body{
     text-align: center;
 }
 
-/* #highScore{
-    padding-left: 100px
-} */
-
 #timer{
-    text-align: right;
-    /* padding-right: 100px; */
+    text-align: left;
+}
+@media (min-width: 768px){
+    #timer{
+        text-align: right;
+    }
 }
 
 .question1{
